# logler-web

./: .gitignore  package.json  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
src/components/file-browser/: FileBrowser.vue
src/components/layout/: AppHeader.vue  AppSidebar.vue  MainContent.vue
src/components/log-viewer/: LogEntry.vue  LogViewer.vue
src/design/: naive-theme.ts
src/logler_web/: app.py  cli.py
