[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logler-web"
version = "0.1.0"
description = "Web UI for Logler - Beautiful log viewer with Vue3 + Naive-UI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Logler Contributors"},
]
keywords = ["logs", "logging", "viewer", "web", "ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
]

dependencies = [
    "logler>=1.0.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "httpx>=0.28.0",
]

[project.scripts]
logler-web = "backend.cli:main"

[project.urls]
Homepage = "https://github.com/gabu-quest/logler-web"
Documentation = "https://github.com/gabu-quest/logler-web#readme"
Repository = "https://github.com/gabu-quest/logler-web"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
